outroTesteVs/force-app/main/default/objects/Notas__c/Notas__c.object-meta.xml
<CustomObject>
    <label>Nota</label>
    <nameField>
        <displayFormat>Nota-{000000}</displayFormat>
        <label>Cod de Notas</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Notas</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>