outroTesteVs/force-app/main/default/objects/Notas__c/fields/Aluno__c.field-meta.xml
<CustomField>
    <fullName>Aluno__c</fullName>
    <label>Aluno</label>
    <referenceTo>Aluno__c</referenceTo>
    <relationshipLabel>Notas</relationshipLabel>
    <relationshipName>Notas</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>