outroTesteVs/force-app/main/default/objects/Notas__c/fields/Disciplina__c.field-meta.xml
<CustomField>
    <fullName>Disciplina__c</fullName>
    <label>Disciplina</label>
    <referenceTo>Disciplina__c</referenceTo>
    <relationshipLabel>Notas</relationshipLabel>
    <relationshipName>Notas</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>